compiler/crates/graphql-ir/tests/parse/fixtures/literal-object-argument.invalid.expected
==================================== INPUT ====================================
# expected-to-throw
query LiteralObjectArgument1 {
  checkinSearchQuery(
    query: {
      unknownField: "Facebook" # error: unknown field
    }
  ) {
    query
  }
}

query LiteralObjectArgument2 {
  checkinSearchQuery(
    query: {
      query: FACEBOOK # error: enum not string
    }
  ) {
    query
  }
}

query LiteralObjectArgument3 {
  checkinSearchQuery(query: FACEBOOK) {
    # error: enum not object
    query
  }
}
==================================== ERROR ====================================
[31m✖︎ The type `CheckinSearchInput` has no field `unknownField`.
See https://relay.dev/docs/error-reference/unknown-field/[0m

  [4mliteral-object-argument.invalid.graphql[0m[2m:5:7[0m
    4 │     query: {
    5 │       unk[31mn[0m[31mo[0m[31mw[0m[31mn[0m[31mF[0m[31mi[0m[31me[0m[31ml[0m[31md[0m: "Facebook" # error: unknown field
      │       ^^^^^^^^^^^^
    6 │     }


✖︎ Expected a value of type 'String'

  literal-object-argument.invalid.graphql:15:14
   14 │     query: {
   15 │       query: FACEBOOK # error: enum not string
      │              ^^^^^^^^
   16 │     }


✖︎ Expected a value of type 'CheckinSearchInput'

  literal-object-argument.invalid.graphql:23:29
   22 │ query LiteralObjectArgument3 {
   23 │   checkinSearchQuery(query: FACEBOOK) {
      │                             ^^^^^^^^
   24 │     # error: enum not object
